--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,9 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/vpMain"/>
+        android:id="@+id/vpMain">
+        <FrameLayout
+            android:layout_width=""
+            android:layout_height=""></FrameLayout>
+    </android.support.v4.view.ViewPager>
 </LinearLayout>
